--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "rc-video-player",
   "version": "1.0.0",
   "description": "rc-video-player",
-  "main": "index.js",
+  "main": "src/index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build/build.js",
+    "build:test": "node build/build.test.js"
   },
   "keywords": [
     "React",
@@ -17,15 +18,19 @@
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "css-loader": "^0.23.1",
-    "node-sass": "^3.4.2",
+    "css-loader": "^0.28.0",
+    "node-sass": "^4.5.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.10"
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "svg-sprite-loader": "^0.3.0",
+    "svgo": "^0.7.2",
+    "svgo-loader": "^1.2.1",
+    "webpack": "^2.3.3"
   }
 }
